# nivel-rio-blumenau

./: .gitignore  Cargo.toml  README.md  index.js  package.json  sonar-project.properties
.github/workflows/: rust.yml
scripts/: coverage.sh  lint.sh
src/: main.rs
src/core/: logger.rs  mod.rs
src/services/: mod.rs  river_info_fetcher.rs
src/utils/: cache.rs  display_river_info.rs  mod.rs
tests/: integration_test.rs
wix/: License.rtf  main.wxs
