[package]
name = "nivel-rio-blumenau"
version = "0.1.0"
edition = "2021"
authors = ["Janderson Constantino <jandersonconstantino@gmail.com>"]
license = "MIT"
description = "CLI para exibir os dados de altura do rio Itajaí em Blumenau, Santa Catarina, Brasil"
homepage = "https://github.com/JandersonConstantino/nivel-rio-blumenau"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.31"
mockall_double = "0.3.0"
wiremock = "0.5"

[dev-dependencies]
mockall = "0.11.4"
